--- a/style1.css
+++ b/style1.css
@@ -4,6 +4,8 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+
 body
 {
     display: flex;
@@ -12,17 +14,18 @@ body
     min-height: 100vh;
     background: #68a4ff;
 }
+
 .clock
 {
-    width: 350px;
-    height: 350px;
+    width: 300px;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #fff url(clock.png);
     background-size: cover;
     border-radius: 50%;
-    border: 4px solid#fff;
+    border: 4px solid rgb(94, 94, 94);
     /* box-shadow: inset 0 0 30px rgba(0,0,0,0.1), 0 20px 20px rgba(0,0,0,0.2), 0 0 0 4px rgba(255,255,255,1);
  */
  box-shadow: 0 -15px 15px rgba(255,255,255,0.05),inset 0 -15px 15px rgba(255, 255, 255, 0.05), 0 15px 15px rgba(0,0,0,0.3), inset 0 15px 15px rgba(0, 0, 0, 0.3) ;
@@ -105,8 +108,62 @@ body
 }
 .tw
 {
-    font-size: 50px;
+    font-size: 40px;
     color: black;
     position: fixed ;
-    bottom: 80px;
+    bottom: 40px;
+    font-weight: 550;
+}
+.Button
+{
+    position: fixed;
+    top: 40px;
+    text-align: center;
+}
+
+.light
+{
+    border:2.5px solid #033d64;
+    /* background: #25344b; */
+    background: none;
+    padding: 10px 20px;
+    font-size: 20px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif ;
+    font-weight: 600;
+    cursor: pointer;
+    margin: 10px;
+    transition: 0.8s;
+    position: relative;
+    overflow: hidden;
+  
+  }
+  .button
+  {
+    color:black ;
+  }
+  .button:hover
+{
+  color: wheat;
+}
+.light::before
+{
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  background: #091921;
+  z-index: -1;
+  transition: 0.8s;
+}
+
+.button::before
+{
+  bottom:  0;
+  border-radius: 50% 50% 0 0;
+}
+.button:hover::before
+{
+  height:180%;
 }
