--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 body
@@ -12,22 +13,22 @@ body
     align-items: center;
     min-height: 100vh;
     background: #091921;
-    scale: 75%;
+    
 }
 
 .clock
 {
-    width: 350px;
-    height: 350px;
+    width: 300px;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url(clock.png);
+    background: rgba(0, 0, 0, 0.081) url(clock.png);
     background-size: cover;
-    border: 4px solid #091921;
+    border: 4px solid #0d2a38;
     border-radius: 50%;
     box-shadow: 0 -15px 15px rgba(255,255,255,0.05),inset 0 -15px 15px rgba(255, 255, 255, 0.05), 0 15px 15px rgba(0,0,0,0.3), inset 0 15px 15px rgba(0, 0, 0, 0.3) ;
-    scale: 48%;
+    
 }
 
 .clock::before
@@ -37,6 +38,7 @@ body
     width: 15px;
     height: 15px;
     background: #fff;
+    border: 2px solid rgba(100, 101, 177, 0.897);
     border-radius: 50%;
     z-index: 10000;
 }
@@ -103,8 +105,63 @@ body
 
 .tw
 {
-    font-size: 50px;
+    font-size: 40px;
     color: white;
     position: fixed ;
-    bottom: 80px;
+    bottom: 40px;
+    font-weight: 550;
+}
+
+.Button
+{
+    position: fixed;
+    top: 40px;
+    text-align: center;
+}
+
+.light
+{
+    border:2.5px solid #69c1fcf1;
+    /* background: #25344b; */
+    background: none;
+    padding: 10px 20px;
+    font-size: 20px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif ;
+    font-weight: 600;
+    cursor: pointer;
+    margin: 10px;
+    transition: 0.8s;
+    position: relative;
+    overflow: hidden;
+  
+  }
+  .button
+  {
+    color:white ;
+  }
+  .button:hover
+{
+  color: black;
+}
+.light::before
+{
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  background: #6895b3;
+  z-index: -1;
+  transition: 0.8s;
+}
+
+.button::before
+{
+  bottom:  0;
+  border-radius: 50% 50% 0 0;
+}
+.button:hover::before
+{
+  height:180%;
 }
