--- a/style1.css
+++ b/style1.css
@@ -12,7 +12,9 @@ body
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #68a4ff;
+    /*background: #68a4ff;*/
+    background:#31b1fb;
+    
 }
 
 .clock
