--- a/style.css
+++ b/style.css
@@ -151,7 +151,8 @@ body
   left: 0;
   width: 100%;
   height: 0%;
-  background: #6895b3;
+  /*background: #6895b3;*/
+  background:#31b1fb;
   z-index: -1;
   transition: 0.8s;
 }
